--- a/Python 101/MOD04_1-6.1_Intro_Python.ipynb
+++ b/Python 101/MOD04_1-6.1_Intro_Python.ipynb
@@ -255,15 +255,51 @@
       "metadata": {
         "id": "DqVNR498sQ4O",
         "colab_type": "code",
-        "colab": {}
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 50
+        },
+        "outputId": "729fc2d1-37a1-48de-92cd-15b70652f03a"
       },
       "cell_type": "code",
       "source": [
         "# [ ] Create the \"Guess the bird\" program \n",
-        "\n"
+        "birds = \"Raven, Hawk, Eagle, Vulture, Pidgeon, Dove, Parrot\"\n",
+        "bird_guess = input(\"Please name a kind of bird, your favorite one preferably and we will check our database to see if we have that bird: \")\n",
+        "bird_tryTwo = \"\"\n",
+        "bird_tryThree = \"\"\n",
+        "birds = birds.lower()\n",
+        "\n",
+        "\n",
+        "if bird_guess.lower() in birds:\n",
+        "  print(\"Wow, you got it on the 1st try! Amazing! Yes,\", bird_guess.title(), \"is in our bird database!\")\n",
+        "elif bird_guess.lower() not in birds:\n",
+        "  bird_tryTwo = input(\"Please try again: \")\n",
+        "  if bird_tryTwo.lower() in birds:\n",
+        "    print(\"I knew you would get it on the 2nd try! Good guess!\", bird_tryTwo.title(), \"is in our bird database.\")\n",
+        "  elif bird_tryTwo.lower() not in birds:\n",
+        "    bird_tryThree = input(\"Please try again: \")\n",
+        "    if bird_tryThree.lower() in birds:\n",
+        "      print(\"I guess 3rd try is a charm!\", bird_tryThree.title(), \"is in our bird database.\")\n",
+        "    else:\n",
+        "      print(\"Sorry your out of tries. See you later!!!\")\n",
+        "    \n",
+        "\n",
+        "  \n",
+        "\n",
+        "    "
       ],
-      "execution_count": 0,
-      "outputs": []
+      "execution_count": 40,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "Please name a kind of bird, your favorite one preferably and we will check our database to see if we have that bird: raven\n",
+            "Wow, you got it on the 1st try! Amazing! Yes, Raven is in our bird database!\n"
+          ],
+          "name": "stdout"
+        }
+      ]
     },
     {
       "metadata": {
