--- a/Python 101/MOD04_1-7.1_Intro_Python.ipynb
+++ b/Python 101/MOD04_1-7.1_Intro_Python.ipynb
@@ -188,11 +188,11 @@
         "trusted": true,
         "id": "M-FQeQJGpRqc",
         "colab_type": "code",
+        "outputId": "0398087e-e7a8-4c06-debd-dcaa0f74b8eb",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 50
-        },
-        "outputId": "0398087e-e7a8-4c06-debd-dcaa0f74b8eb"
+        }
       },
       "cell_type": "code",
       "source": [
@@ -207,7 +207,7 @@
         "    print(\"Hi,\", familar_name + \".\")\n",
         "    break\n"
       ],
-      "execution_count": 3,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "stream",
@@ -368,15 +368,52 @@
       "metadata": {
         "id": "BuMxXzhLpRqx",
         "colab_type": "code",
-        "colab": {}
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 101
+        },
+        "outputId": "25f59221-64f1-42cc-a76b-dba1f91212f2"
       },
       "cell_type": "code",
       "source": [
         "# [ ] Create the Shirt Count program, run tests\n",
+        "\n",
+        "S = 0\n",
+        "M = 0\n",
+        "L = 0\n",
+        "\n",
+        "while True:\n",
+        "  user_choices = input(\"Please enter the sizes of shirts you need (S for small, M for medium, L for large). Enter 'exit' when completed: \")\n",
+        "  \n",
+        "  if user_choices.lower().startswith(\"ex\") or user_choices == \"\":\n",
+        "    break\n",
+        "  elif user_choices.lower() == \"s\":\n",
+        "    S += 1\n",
+        "  elif user_choices.lower() == \"m\":\n",
+        "    M += 1\n",
+        "  elif user_choices.lower() == \"l\":\n",
+        "    L += 1\n",
+        "\n",
+        "print()\n",
+        "print(\"The total number of shirts purchase in each size are: Small =\", str(S) + \",\", \"Medium =\", M, \"and Large =\", str(L) + \".\", \"Altogether,\", S+M+L, \"shirts were purchased.\")\n",
+        "  \n",
+        "  \n",
         "\n"
       ],
-      "execution_count": 0,
-      "outputs": []
+      "execution_count": 8,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "Please enter the sizes of shirts you need (S for small, M for medium, L for large). Enter 'exit' when completed: s\n",
+            "Please enter the sizes of shirts you need (S for small, M for medium, L for large). Enter 'exit' when completed: s\n",
+            "Please enter the sizes of shirts you need (S for small, M for medium, L for large). Enter 'exit' when completed: \n",
+            "\n",
+            "The total number of shirts purchase in each size are: Small = 2, Medium = 0 and Large = 0. Altogether, 2 shirts were purchased.\n"
+          ],
+          "name": "stdout"
+        }
+      ]
     },
     {
       "metadata": {
