--- a/Python 101/MOD04_1-7.2_Intro_Python.ipynb
+++ b/Python 101/MOD04_1-7.2_Intro_Python.ipynb
@@ -158,7 +158,7 @@
           "base_uri": "https://localhost:8080/",
           "height": 50
         },
-        "outputId": "ea64377f-ab52-4ef5-d7e9-bcb7799fc5ee"
+        "outputId": "c0185ceb-6ce6-49a1-8427-e126930f99ad"
       },
       "cell_type": "code",
       "source": [
@@ -174,7 +174,7 @@
         "    all_animals.append(animal_name)\n",
         "    num_animals -= 1\n",
         "    del all_animals[-1]\n",
-        "    print(\"Your list of animals is shorter than expected but acceptable nonetheless! Thanks!\", \"Your Animal List: \", all_animals)\n",
+        "    print(\"\\nYour list of animals is shorter than expected but acceptable nonetheless! Thank You!\", \"\\nHere is your Animal List: \", all_animals)\n",
         "    break\n",
         "  elif all_animals == [] and animal_name == \"\":\n",
         "    print(\"You do not have a favorite animal! Bye!\")\n",
@@ -182,17 +182,18 @@
         "  elif all_animals != [] and animal_name == \"\":\n",
         "    all_animals.append(animal_name)\n",
         "    del all_animals[-1]\n",
-        "    print(\"Your list of animals is shorter than expected but acceptable nonetheless! Thanks!\", \"Your Animal List: \", all_animals)\n",
+        "    print(\"\\nYour list of animals is shorter than expected but acceptable nonetheless! Thank You!\", \"\\nHere is your Animal List: \", all_animals)\n",
         "    break\n",
         "  else:\n",
         "    all_animals.append(animal_name)\n",
         "    num_animals -= 1\n",
-        "    print (all_animals)\n",
+        "    if num_animals == 0:\n",
+        "      print(\"\\nThank You for providing your favorite animals!\", \"\\nHere is your Animal List: \", all_animals)\n",
         "    \n",
         "\n",
         "\n"
       ],
-      "execution_count": 58,
+      "execution_count": 8,
       "outputs": [
         {
           "output_type": "stream",
