--- a/Python 101/MOD04_1-7.2_Intro_Python.ipynb
+++ b/Python 101/MOD04_1-7.2_Intro_Python.ipynb
@@ -278,15 +278,36 @@
       "metadata": {
         "id": "otVtgi6fnFrU",
         "colab_type": "code",
-        "colab": {}
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 67
+        },
+        "outputId": "34aae3f5-704e-433a-fba8-8929a01d5094"
       },
       "cell_type": "code",
       "source": [
         "# [ ] Create the program, run tests\n",
-        "\n"
+        "long_num = \"\"\n",
+        "int_num = input(\"Please input a number: \")\n",
+        "\n",
+        "while int_num.isdigit() == True:\n",
+        "  int_num = input(\"Please enter your favorite number or enter any letter to escape: \")\n",
+        "  long_num += int_num\n",
+        "  \n",
+        "  print(long_num)\n"
       ],
-      "execution_count": 0,
-      "outputs": []
+      "execution_count": 31,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "Please input a number: 3\n",
+            "Please enter your favorite number or enter any letter to escape: \n",
+            "\n"
+          ],
+          "name": "stdout"
+        }
+      ]
     },
     {
       "metadata": {
